# neuromapp

./: .gitignore  .gitmodules  .gitreview  AUTHORS.txt  CMakeLists.txt  README  README.md  default.nix
ll-counter/: CMakeLists.txt
ll-counter/CMake/: Compiler.cmake
ll-counter/extra/xlc_asm_labels/: demo_run.c  postprocess.pl
ll-counter/llc/: CMakeLists.txt  linux_perf_count.cc  linux_perf_count.h  ll_common.h  ll_counter_x86.h  tvalue_list.h  unroll.h
ll-counter/op_latency/: CMakeLists.txt  kernels_asm.h  latency_kernels.h  primitive_ops.cc  primitive_ops.h  primitive_ops_powerpc.h  primitive_ops_x86_64.h  run_kernels.cc
ll-counter/power8_latency/: run_kernels.cc
ll-counter/src/: linux_perf_count.h  ll_common.h  ll_counter.h  ll_counter_generic_perf.h  ll_counter_power8.h  pin_thread.cc  pin_thread.h  unroll.h
ll-counter/test/: README  check_asm_unroll.cc  check_bw_and_perf.cc  check_ll_counter.cc  check_p8_llc.cc  check_tseq.cc  demo_unroll.cc  test_ll_timer.cc  test_unroll.cc
neuromapp/: CMakeLists.txt  README  README.md
neuromapp/app/: .CMakeLists.txt.swp  CMakeLists.txt  README  driver.cpp  driver.h  driver_exception.h  main.cpp  miniapp.h
neuromapp/compression/: CMakeLists.txt  allocator.h  bit_shifting.h  block.h  block.hpp  block_sort.h  compress_exception.h  compression.h  compressor.h  conv_info.h  exception.h  francesco_task.cpp  kernel_measurements.cpp  kernel_measurements.h  main.cpp  main_functions.h  prac_compression.cpp  prac_hana.cpp  prac_shift.cpp  prac_sort.cpp  shifts.cpp  stream_bench.h  stream_benchmark.h  timer_tool.h  type_definition.h  util.h  zlib_fns.h  zlib_prac.cpp
neuromapp/coreneuron_1.0/: .CMakeLists.txt.swp  CMakeLists.txt  README
neuromapp/coreneuron_1.0/cstep/: cstep.h  helper.c  helper.h  main.c
neuromapp/coreneuron_1.0/environment/: generator.cpp  generator.h  presyn_maker.cpp  presyn_maker.h  sim_env.cpp  sim_env.h
neuromapp/coreneuron_1.0/event_passing/: CMakeLists.txt  README
neuromapp/coreneuron_1.0/fullComputationStep/: fullComputationStep.h  helper.c  helper.h  main.c
neuromapp/coreneuron_1.0/kernel/: helper.c  helper.h  kernel.h  main.c
neuromapp/coreneuron_1.0/queue/: .main.cpp.swp  .serial_benchmark.h.swp  main.cpp  queue.h  serial_benchmark.h  timer_asm.h  trait.h
neuromapp/coreneuron_1.0/queueing/: README  generator.cpp  generator.h  lock.h  main.cpp  pool.cpp  pool.h  queue.cpp  queue.h  queueing.h  spinlock_apple.h  spinlock_queue.h  thread.cpp  thread.h
neuromapp/coreneuron_1.0/solver/: helper.c  helper.h  hines.c  hines.h  main.c  solver.h
neuromapp/coreneuron_1.0/spike/: CMakeLists.txt  algos.hpp  main.cpp  spike.h
neuromapp/coreneuron_1.0/test/: CMakeLists.txt  README  cstep.cpp  file.cpp  fullComputationStep.cpp  helper.cpp  helper.h  helper.hpp  kernel.cpp  path.h.in  solver.cpp
neuromapp/h5benchmark/: CMakeLists.txt  README.md  h5benchmark.c  h5benchmark.cpp
neuromapp/hdf5/: CMakeLists.txt  H5SynapseLoader.cpp  H5SynapseLoader.h  H5SynapseLoader_columns.cpp  H5SynapseLoader_columns.h  distributed_driver.cpp  h5reader.cpp  h5reader.h  helper.h
neuromapp/hello/: CMakeLists.txt  hello.h  main.cpp
neuromapp/iobench/: CMakeLists.txt  README.md  benchmark.cpp  benchmark.h  iobench.cpp  iobench.h  main.cpp
neuromapp/key-value/: CMakeLists.txt  benchmark.h  key-value.h  kv-iface.h  lock.h  main.cpp  memory.h  meta.h  mpiexec.cpp  mpikey-value.cpp  mpikey-value.h  mpikey-value.ipp
neuromapp/keyvalue/: CMakeLists.txt  Makefile  benchmark.h  keyvalue.h  kv-iface.h  lock.h  main.cpp  memory.h  meta.h  mpiexec.cpp  mpikeyvalue.h  mpikeyvalue.ipp
neuromapp/ll-counter/: README
neuromapp/nest/: CMakeLists.txt  distributed_driver.cpp  eventdelivermanager.cpp  eventdelivermanager.h  mpi_manager.cpp  mpi_manager.h  simulationmanager.cpp  simulationmanager.h
neuromapp/neuromapp/: CMakeLists.txt  README
neuromapp/queueing/: CMakeLists.txt  README  container.cpp  container.h  lock.h  lockless_queue.h  main.cpp  pool.cpp  pool.h  queue.cpp  queue.h  queueing.h  spinlock_apple.h  spinlock_queue.h  thread.cpp  thread.h
neuromapp/readi/: CMakeLists.txt  CompRej.h  Mesh.h  Model.h  RdSolver.h  Reac.h  Tets.h  main.cpp  readi.h  rng_utils.h
neuromapp/replib/: CMakeLists.txt  README.md  benchmark.h  main.cpp  mpiexec.cpp  replib.h
neuromapp/spike/: CMakeLists.txt  algos.hpp  blockinggraph.cpp  distributed.cpp  distributedgraph.cpp  environment.cpp  environment.h  fullyconnectedgraph.cpp  global_collective.cpp  main.cpp  mpi_spike_exec.cpp  mpiexec.cpp  mpispike.cpp  mpispike.h  mpispikegraph.cpp  mpispikegraph.h  mpispikegraph2.h  spike.h  spike_exchange.h
neuromapp/utils/: CMakeLists.txt  argv_data.h  error.h
original_version/main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/app/: CMakeLists.txt  app.cpp  exception.cpp
test/compression/: CMakeLists.txt  block_reading.cpp  block_reading_tests.cpp  boost_test_compression.cpp  compression.cpp  sorting.cpp  sorting_tests.cpp  spliting_tests.cpp  stream_test.cpp
test/coreneuron_1.0/: CMakeLists.txt  README  cstep.cpp  helper.cpp  helper.h  kernel.cpp  path.h.in  queue.cpp  queueing.cpp  queueing_test_header.hpp  solver.cpp  test_header.hpp
test/hdf5/: CMakeLists.txt  H5Nest_columns.cpp  h5nest_columns.cpp
test/hello/: CMakeLists.txt  hello.cpp  test.cpp
test/iobench/: CMakeLists.txt  args.cpp  bench.cpp  stats.cpp
test/key-value/: CMakeLists.txt  test.cpp  test_mpi.cpp
test/keyvalue/: CMakeLists.txt  args.cpp  memory.cpp  statistic.cpp  test.cpp  test_mpi.cpp
test/nest/: CMakeLists.txt  connector.cpp  distributed.cpp  h5import.cpp  nestdistri.cpp  pool.cpp  synapse.cpp  synapses.cpp
test/queueing/: CMakeLists.txt  test.cpp  test_header.hpp
test/readi/: CMakeLists.txt  comprej.cpp  di.cpp  model.cpp  reac.cpp  tets.cpp
test/replib/: CMakeLists.txt  bench.cpp  config.cpp  stats.cpp
test/spike/: CMakeLists.txt  pool_adapter.h  spike_test_header.hpp  test.cpp
test/tools/: mpi_helper.h
test/utils/: CMakeLists.txt  argv_data.cpp  storage.cpp  test.cpp  test_argv_data.cpp  test_storage.cpp  timer.cpp
(+626 files in other folders)
