cmake_minimum_required(VERSION 3.2)
project(H5BENCHMARK VERSION 1.0.0)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_VERBOSE_MAKEFILE ON)

find_package(MPI REQUIRED)

set(SOURCE_FILES "${PROJECT_SOURCE_DIR}/src/H5Benchmark.cpp")

add_executable(h5benchmark ${SOURCE_FILES})

install(TARGETS h5benchmark
        RUNTIME DESTINATION bin)
